--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,11 @@
-layout python3
+source_up
+export VIRTUAL_ENV=$(expand_path '.venv')
+# path updates
+PATH_add .venv/bin
+path_add PYTHONPATH .venv/lib/python3.8/site-packages/
+path_add PYTHONPATH .venv/lib/python3.9/site-packages/
+path_add PYTHONPATH .
+path_add PYTHONPATH ./third_party/tvm/
 
 location=$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)
 echo $location
